--- a/pages/join/paySuccess/paySuccess.wxss
+++ b/pages/join/paySuccess/paySuccess.wxss
@@ -77,9 +77,17 @@ color:rgba(51,51,51,1);
   align-items: center;
   justify-content: space-around;
   height: 173rpx;
+  position: relative;
+}
+.backBoxTopTop{
+  height: 45rpx;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  background:linear-gradient(0deg,rgba(255,255,255,1),#CFC1B9);
 }
 .backBottom{
-  border-top: 2rpx solid #ccc;
+  border-top: 2rpx dashed #ccc;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
