--- a/pages/address/address.wxss
+++ b/pages/address/address.wxss
@@ -4,7 +4,8 @@
 .addressItem{
   background: #fff;
   margin: 35rpx 24rpx 0 35rpx;
-  padding: 39rpx 26rpx;
+  padding:39rpx 26rpx 20rpx 26rpx;
+
 }
 
 .titleBox{
@@ -16,6 +17,10 @@
   margin-top: 24rpx;
   padding-bottom: 30rpx;
   border-bottom: 2rpx solid #f5f5f5;
+}
+.iconSelect{
+  width: 46rpx;
+  height: 46rpx;
 }
 .iconSelect image{
   width: 46rpx;
@@ -53,6 +58,9 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+.btn view:first-child{
+  margin-left: 20rpx;
 }
 .btnSpecialBlock{
   margin: 35rpx;
