--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -25,10 +25,12 @@
   <view class='optionItem' bindtap='showOrder'>
     <view class='optionTitle'>规格</view>
     <view class='optionValue'>请选择</view>
+    <view class='icon'><image src='/res/icon/icon_right_click.png'></image></view>
   </view>
   <view class='optionItem' bindtap='showInfo'>
     <view class='optionTitle'>参数</view>
     <view class='optionValue'>品牌 净含量</view>
+    <view class='icon'><image src='/res/icon/icon_right_click.png'></image></view>
   </view>
 </view>
 
@@ -40,21 +42,23 @@
 </view>
 
 <view class='footBtn' catchtouchmove='move'>
-  <view class='btnSpecialBlock' bindtap='showOrder'>立即购买</view>
+<view wx:if='{{showIndex ==3}}' class='btnSpecialBlock' bindtap='closeOrder'>完成</view>
+  <view wx:else class='btnSpecialBlock' bindtap='showOrder'>立即购买</view>
 </view>
 
 
 
 <view wx:if='{{showIndex == 1 || showIndex == 3}}' class='backMask' bindtap='closeOrder' catchtouchmove='move'>
 </view>
-<view wx:if='{{showIndex ==3}}' class='goodInfoBox' catchtouchmove='move'>
+<view wx:if='{{showIndex ==3}}' class='goodInfoBox'>
   <view class='goodInfoBoxTitle'>商品参数</view>
   <view class='infoBoxItem' wx:for='{{goodParams}}' wx:key='index'>
     <view class='infoBoxTitle'>{{item.title}}</view>
     <view class='infoBoxValue'>{{item.value}}</view>
   </view>
-  <view class='btnSpecialBlock' bindtap='closeOrder'>完成</view>
+  
 </view>
+
 
 
 <view wx:if='{{showIndex ==1}}' class='orderBox' catchtouchmove='move'>
