--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -5,7 +5,7 @@
   width: 100%;
   background: #fff;
   border-top: 2rpx solid #f6f6f6;
-  z-index: 1;
+  z-index: 3;
 }
 .btnSpecialBlock{
   width: auto;
@@ -69,7 +69,7 @@ swiper image{
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin: 36rpx 15rpx 0rpx 15rpx;
+  margin:25rpx 15rpx 0rpx 24rpx;
 }
 .optionItem:last-child{
   margin-bottom: 36rpx;
@@ -83,6 +83,7 @@ swiper image{
   line-height:48rpx;
 }
 
+
 .optionValue{
   font-size:26rpx;
   font-family:PingFang-SC-Regular;
@@ -90,6 +91,7 @@ swiper image{
   color:rgba(102,102,102,1);
   line-height:48rpx;
   margin-left: 23rpx;
+  flex-grow:1;
 }
 
 .contentBox{
@@ -297,7 +299,9 @@ color:rgba(255,255,255,1);
   border-radius: 10rpx 10rpx 0 0;
   width: 100%;
   bottom: 0;
+  overflow-y: scroll;
   z-index: 2;
+  top: 224rpx;
 }
 .infoBoxItem{
   border-bottom: 1rpx solid #f6f6f6;
@@ -328,4 +332,9 @@ color:rgba(255,255,255,1);
   font-family:PingFang-SC-Regular;
   font-weight:400;
   color:rgba(102,102,102,1);
+}
+
+.icon{
+  width: 36rpx;
+  height: 36rpx;
 }
