--- a/pages/user/incomeInfo/incomeInfo.wxss
+++ b/pages/user/incomeInfo/incomeInfo.wxss
@@ -31,10 +31,11 @@
   font-size: 24rpx;
 }
 .moneyBox view:last-child{
-font-family:PingFang-SC-Heavy;
-font-weight:800;
-color:rgba(255,255,255,1);
-margin-left: 10rpx;
+  margin-left: 10rpx;
+  font-size:26rpx;
+  font-family:PingFang-SC-Heavy;
+  font-weight:800;
+  color:rgba(255,255,255,1);
 }
 .textBox .info{
   font-size:24rpx;
@@ -79,8 +80,8 @@ margin-left: 10rpx;
   border-radius:50%;
 }
 .userImg image{
-  width:72rpx;
-  height:72rpx;
+  width:100%;
+  height:100;
   border-radius:50%;
 }
 .itemBox{
