--- a/pages/address/address.wxss
+++ b/pages/address/address.wxss
@@ -1,68 +1,144 @@
 /* pages/address/address.wxss */
 
-
-.addressItem{
+.addressItem {
   background: #fff;
   margin: 35rpx 24rpx 0 35rpx;
-  padding:39rpx 26rpx 20rpx 26rpx;
-
+  padding: 39rpx 26rpx 20rpx 26rpx;
 }
 
-.titleBox{
+.titleBox {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
-.contentBox{
+
+.contentBox {
   margin-top: 24rpx;
   padding-bottom: 30rpx;
   border-bottom: 2rpx solid #f5f5f5;
 }
-.iconSelect{
+
+.iconSelect {
   width: 46rpx;
   height: 46rpx;
 }
-.iconSelect image{
+
+.iconSelect image {
   width: 46rpx;
   height: 46rpx;
 }
-.footLeft{
+
+.footLeft {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
-.fontTitle{
+
+.fontTitle {
   margin: 0 10rpx 0 10rpx;
 }
-.iconEdit image{
+
+.iconEdit image {
   width: 32rpx;
   height: 32rpx;
 }
-.iconDel image{
+
+.iconDel image {
   width: 32rpx;
   height: 35rpx;
 }
 
-.addrFoot{
+.addrFoot {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   margin-top: 30rpx;
 }
-.footRight{
+
+.footRight {
   display: flex;
   flex-direction: row;
   justify-items: flex-end;
 }
-.btn{
+
+.btn {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
-.btn view:first-child{
+
+.btn view:first-child {
   margin-left: 20rpx;
 }
-.btnSpecialBlock{
+
+.btnSpecialBlock {
   margin: 35rpx;
   width: auto;
+}
+
+.diaLog {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.diaLogBox {
+  margin: 350rpx auto 0 auto;
+  width: 508rpx;
+  height: 264rpx;
+  background: rgba(255, 255, 255, 1);
+  border-radius: 10rpx;
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  overflow: hidden;
+}
+
+.diaLogBtns {
+  height: 87rpx;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.diaLogInfo {
+  margin: auto;
+  font-size: 28rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(102, 102, 102, 1);
+}
+
+.diaLogBtns view {
+  flex-grow: 1;
+  text-align: center;
+  line-height: 87rpx;
+  border-top: 1rpx solid #f6f6f6;
+}
+
+.diaLogBtns view:last-child {
+  background: #f5f5f5;
+  font-size: 32rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(130, 76, 31, 1);
+}
+
+.diaLogBtns view:first-child {
+  font-size: 32rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(153, 153, 153, 1);
+}
+
+.backMask {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background: #000;
+  opacity: 0.5;
 }
