--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -25,12 +25,16 @@
   <view class='optionItem' bindtap='showOrder'>
     <view class='optionTitle'>规格</view>
     <view class='optionValue'>请选择</view>
-    <view class='icon'><image src='/res/icon/icon_right_click.png'></image></view>
+    <view class='icon'>
+      <image src='/res/icon/icon_right_click.png'></image>
+    </view>
   </view>
   <view class='optionItem' bindtap='showInfo'>
     <view class='optionTitle'>参数</view>
     <view class='optionValue'>品牌 净含量</view>
-    <view class='icon'><image src='/res/icon/icon_right_click.png'></image></view>
+    <view class='icon'>
+      <image src='/res/icon/icon_right_click.png'></image>
+    </view>
   </view>
 </view>
 
@@ -42,7 +46,7 @@
 </view>
 
 <view class='footBtn' catchtouchmove='move'>
-<view wx:if='{{showIndex ==3}}' class='btnSpecialBlock' bindtap='closeOrder'>完成</view>
+  <view wx:if='{{showIndex ==3}}' class='btnSpecialBlock' bindtap='closeOrder'>完成</view>
   <view wx:else class='btnSpecialBlock' bindtap='showOrder'>立即购买</view>
 </view>
 
@@ -56,12 +60,12 @@
     <view class='infoBoxTitle'>{{item.title}}</view>
     <view class='infoBoxValue'>{{item.value}}</view>
   </view>
-  
+
 </view>
 
 
 
-<view wx:if='{{showIndex ==1}}' class='orderBox' catchtouchmove='move'>
+<view wx:if='{{showIndex ==1}}' class='orderBox'>
   <view bindtap='closeOrder' class='closeImg'>
     <view class='icon'>
       <image src='/res/icon/icon-close.png'></image>
@@ -78,23 +82,23 @@
     </view>
 
 
-
-    <view class='orderOption' wx:for='{{spec}}' wx:for-index='i'>
-      <view class='orderOptionTitle'>选择规格</view>
-      <view class='orderOptionContent'>
-        <view bindtap='chooseSpec' data-specindex='{{i}}' data-index='{{index}}' wx:for='{{item.items}}' wx:key='index' class='"orderOptionItem "+{{ item.checked ? "optionActive" : ""}}'>{{item.title}}</view>
+    <view class='orderOptionBox'>
+      <view class='orderOption' wx:for='{{spec}}' wx:for-index='i'>
+        <view class='orderOptionTitle'>{{item.title}}</view>
+        <view class='orderOptionContent'>
+          <view bindtap='chooseSpec' data-specindex='{{i}}' data-index='{{index}}' wx:for='{{item.specs}}' wx:key='index' class='"orderOptionItem "+{{ item.checked ? "optionActive" : ""}}'>{{item.title}}</view>
+        </view>
       </view>
     </view>
-
 
     <view class='orderBuyNum'>
 
       <view class='infoItem'>
         <view class='infoLeft'>购买数量</view>
         <view class='caoNiMa'>
-          <view class='fuck1'>-</view>
-          <view class='fuck2'>456</view>
-          <view class='fuck3'>+</view>
+          <view class='fuck1' bindtap='deOrderNum'>-</view>
+          <view class='fuck2'>{{orderInfo.num ? orderInfo.num:0}}</view>
+          <view class='fuck3' bindtap='addOrderNum'>+</view>
         </view>
       </view>
 
