--- a/pages/user/myGroup/groupInfo/index.wxss
+++ b/pages/user/myGroup/groupInfo/index.wxss
@@ -29,7 +29,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 50rpx 25rpx;
+  padding:40rpx 25rpx;
   background: #fff;
   margin-top: 4rpx;
 }
@@ -42,7 +42,12 @@
   flex-direction: row;
   align-items: center;
 }
+.specialFont{
+  color: #FFC011;
+  display: inline;
+}
 .leftRight{
+  height:90rpx;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
