--- a/pages/user/myGroup/myGroup.wxss
+++ b/pages/user/myGroup/myGroup.wxss
@@ -44,6 +44,10 @@
   background: #30261B;
   background:rgba(242,237,232,1);
 }
+.back image{
+  width: 100%;
+  height: 100%;
+}
 
 .btnSSS{
   width:230rpx;
