--- a/pages/user/referCenter/referCenter.wxss
+++ b/pages/user/referCenter/referCenter.wxss
@@ -40,7 +40,10 @@
   width: 100%;
   z-index: -1;
   height: 412rpx;
-  background: #30261B;
+}
+.back image{
+  width: 100%;
+  height: 100%;
 }
 .cardBox{
   width:702rpx;
