--- a/pages/user/user.wxss
+++ b/pages/user/user.wxss
@@ -3,11 +3,17 @@
 .userBox{
   height: 350rpx;
   width: 100%;
-  background: #060100;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.bgImg{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 350rpx;
+  z-index: -1;
 }
 .imgBox image{
   width:140rpx;
