--- a/components/navBottom/index.wxss
+++ b/components/navBottom/index.wxss
@@ -37,8 +37,9 @@
   height: 50rpx;
 } 
 .navImgNoTitle{
-  width: 80rpx;
-  height: 80rpx;
+  width: 90rpx;
+  height: 90rpx;
+  margin-top:-8rpx;
 }
 .navTitle{
   height:19rpx;
@@ -46,7 +47,7 @@
   font-family:PingFang-SC-Medium;
   font-weight:500;
   color:rgba(102,102,102,1);
-  margin: auto;
+  margin:-6rpx auto;
 }
 
 .backshadow{
