--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -2,7 +2,7 @@
 
 <view class='infoBox'>
   <swiper indicator-dots="{{indicatorDots}}" circular="{{circular}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
-    <block wx:for="{{goodInfo.thumb_url}}">
+    <block wx:for="{{goodInfo.thumb_url}}" wx:key='index'>
       <swiper-item>
         <image src="{{item}}" class="slide-image" />
       </swiper-item>
@@ -24,7 +24,7 @@
   </view>
   <view class='optionItem' bindtap='showOrder'>
     <view class='optionTitle'>规格</view>
-    <view class='optionValue'>请选择</view>
+    <view class='optionValue'>{{orderInfo.specInfo.title ? orderInfo.specInfo.title:"请选择"}}</view>
     <view class='icon'>
       <image src='/res/icon/icon_right_click.png'></image>
     </view>
@@ -40,14 +40,14 @@
 
 <view class='contentBox'>
   <view class='contentTitle'>商品详情</view>
-  <view wx:for="{{goodInfo.thumb_url}}" class='contentImage'>
+  <view wx:for="{{goodInfo.thumb_url}}" class='contentImage' wx:key='index'>
     <image mode='widthFix' src='{{item}}'></image>
   </view>
 </view>
 
 <view class='footBtn' catchtouchmove='move'>
   <view wx:if='{{showIndex ==3}}' class='btnSpecialBlock' bindtap='closeOrder'>完成</view>
-  <view wx:else class='btnSpecialBlock' bindtap='showOrder'>立即购买</view>
+  <view wx:else class='btnSpecialBlock' bindtap='{{disableFlag? "":"showOrder"}}'>立即购买</view>
 </view>
 
 
@@ -78,13 +78,13 @@
       <image src='{{goodInfo.thumb}}'></image>
     </view>
     <view class='goodInfo'>
-      <view class='gooPrice'>￥{{goodInfo.marketprice}}</view>
-      <view>已选：330mlx12</view>
+      <view class='gooPrice'>￥{{orderInfo.goods_price ? orderInfo.goods_price:goodInfo.marketprice}}<!--{{goodInfo.marketprice}}--></view>
+      <view>已选：{{orderInfo.specInfo.title ? orderInfo.specInfo.title:'无'}}</view>
     </view>
 
 
     <view class='orderOptionBox'>
-      <view class='orderOption' wx:for='{{spec}}' wx:for-index='i'>
+      <view class='orderOption' wx:for='{{spec}}' wx:key='index' wx:for-index='i'>
         <view class='orderOptionTitle'>{{item.title}}</view>
         <view class='orderOptionContent'>
           <view bindtap='chooseSpec' data-specindex='{{i}}' data-index='{{index}}' wx:for='{{item.specs}}' wx:key='index' class='"orderOptionItem "+{{ item.checked ? "optionActive" : ""}}'>{{item.title}}</view>
