--- a/pages/order/orderdetail/orderdetail.wxml
+++ b/pages/order/orderdetail/orderdetail.wxml
@@ -7,7 +7,7 @@
     <view class='fontTitle'>订单状态: {{orderDetail.top.status == -1 ? goodStatus[5].statusTitle : goodStatus[orderDetail.top.status].statusTitle}}</view>
   </view>
   <view wx:if='{{orderDetail.top.status == "0"}}' class='fontSpecial'>支付剩余时间:{{orderDetail.top.time}}</view>
-  <view  wx:if='{{orderDetail.top.status == "1" || orderDetail.top.status == "2"}}' class='fontSpecial'>物流信息: {{orderDetail.top.wuliu}}</view>
+  <view  wx:if='{{orderDetail.top.status == "1" || orderDetail.top.status == "2"}}' class='fontSpecial'>物流信息: {{orderDetail.top.AcceptStation}}</view>
   <view wx:if='{{orderDetail.top.status == "3"}}' class='wuliuItemBox'>
     <view class='left'>
       <view class='fontSpecial'>快递已签收，签收人： {{orderDetail.top.realname}}</view>
@@ -31,7 +31,7 @@
   </view>
   <view class='userContentBox'>
     
-    <view class='fontTitle'><view class='addreType'>默认</view> {{orderDetail.address.province}} {{orderDetail.address.city}} {{orderDetail.address.area}} {{orderDetail.address.address}}</view>
+    <view class='fontTitle'><view wx:if='{{orderDetail.address.isdefault == "1"}}' class='addreType'>默认</view> {{orderDetail.address.province}} {{orderDetail.address.city}} {{orderDetail.address.area}} {{orderDetail.address.address}}</view>
   </view>
 </view>
 
@@ -72,18 +72,18 @@
 
 
 <view class='otherBox'>
-  <view class='fontTitle'>订单编号:{{orderDetail.oother.order_sn}}</view>
-  <view class='fontTitle'>下单时间:{{orderDetail.oother.createtime}}</view>
+  <view class='fontTitle'>订单编号:{{orderDetail.other.order_sn}}</view>
+  <view class='fontTitle'>下单时间:{{orderDetail.other.createtime}}</view>
 </view>
 
 <!--
 -1取消订单0待付款1代发货2已发货3成功4退款申请
 -->
 <view class='btnFoot'>
-  <view wx:if='{{orderDetail.top.status == "-1" ? true : false}}' class='btnSpecial'>删除订单</view>
+  <view wx:if='{{orderDetail.top.status == "-1" ? true : false}}' bindtap='delOrder' class='btnSpecial'>删除订单</view>
   <view wx:if='{{orderDetail.top.status == "0" ? true : false}}' class='btnSpecial'>立即支付</view>
-  <view wx:if='{{orderDetail.top.status == "0" ? true : false}}' class='btnCancel'>取消订单</view>
-  <view wx:if='{{orderDetail.top.status == "1" ? true : false}}' class='btnCancel'>取消订单</view>
+  <view wx:if='{{orderDetail.top.status == "0" ? true : false}}' bindtap='closeOrder' class='btnCancel'>取消订单</view>
+  <view wx:if='{{orderDetail.top.status == "1" ? true : false}}' bindtap='closeOrder' class='btnCancel'>取消订单</view>
   <view wx:if='{{orderDetail.top.status == "2" ? true : false}}' class='btnSpecialBlock' bindtap='navToHome'>再去逛逛</view>
   <view wx:if='{{orderDetail.top.status == "3" ? true : false}}' class='btnSpecialBlock' bindtap='navToHome'>再去逛逛</view>
 </view>
